<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>amr_robot_launcher</name>
  <version>1.0.0</version>
  <description>run gazebo with some amr robots</description>
  <maintainer email="wataru@rins.ryukoku.ac.jp">Wataru UEMURA</maintainer>
  <license>Apache-2.0</license>

  <depend>launch_ros</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
